add missed requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,8 @@ install_requires=
 	unicodecsv==0.14.1
 	django-braces==1.13
 	swapper==1.1.1
+	django-reversion>=3.0
+	python-memcached
 
 [options.entry_points]
 console_scripts =
