fix in Shield and license

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,8 @@ classifiers =
     Framework :: Django
     Framework :: Django :: 2.2
     Intended Audience :: Developers
-    License :: OSI Approved :: AGPLv3 License
+    Development Status :: 3 - Alpha
+	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
 	Natural Language :: English
 	Operating System :: MacOS :: MacOS X
 	Operating System :: POSIX
