Add coverage Shield

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,10 @@ author = Ramez Ashraf
 author_email = ramezd@rasystems.io
 description = A light-weight effective Django based framework to create business applications
 long_description = file:README.rst
+long_description_content_type=text/x-rst
 url = https://github.com/ra-systems/RA
 project_urls =
-    Travis CI = https://travis-ci.org/raaystems/RA/
+    Travis CI = https://travis-ci.org/ra-systems/RA/
     Ra documentation = https://ra-framework.readthedocs.io/en/latest/
     Ra source = https://github.com/ra-systems/RA
 classifiers =
