Fix charts list on report page + bump version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 license_file = LICENSE
 name = django-ra
-version = 0.0.7
+version = 0.0.8
 author = Ramez Ashraf
-author_email = ramezd@rasystems.io
-description = A light-weight effective Django based framework to create business applications
+author_email = ramez@rasystems.io
+description = A light-weight effective Django based framework to create diverse business applications
 long_description = file:README.rst
 long_description_content_type=text/x-rst
 url = https://github.com/ra-systems/RA
