Drop use of django braces, Upgrade Django to 2.2.9, adds version to ra.__init__

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 license_file = LICENSE
 name = django-ra
-version = 0.0.8
-author = Ramez Ashraf
+version = attr: ra.__version__
+author = Ra Systems
 author_email = ramez@rasystems.io
 description = A light-weight effective Django based framework to create diverse business applications
 long_description = file:README.rst
@@ -41,7 +41,7 @@ packages = find:
 python_requires = >=3.6
 install_requires=
 	pytz
-	django==2.2.8
+	django==2.2.9
 	psycopg2-binary
 	simplejson
 	django-crequest==2018.5.11
@@ -49,7 +49,6 @@ install_requires=
 	django-crispy-forms==1.8.0
 	dateutils==0.6.7
 	unicodecsv==0.14.1
-	django-braces==1.13
 	swapper==1.1.1
 	django-reversion>=3.0.5
 	python-memcached
