Adds Django 3 support

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ classifiers =
     Environment :: Web Environment
     Framework :: Django
     Framework :: Django :: 2.2
+    Framework :: Django :: 3.0
     Intended Audience :: Developers
     Development Status :: 3 - Alpha
 	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
@@ -41,7 +42,7 @@ packages = find:
 python_requires = >=3.6
 install_requires=
 	pytz
-	django==2.2.9
+	django>=2.2.9
 	psycopg2-binary
 	simplejson
 	django-crequest==2018.5.11
