--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ install_requires=
 	psycopg2-binary
 	simplejson
 	django-crequest==2018.5.11
-	django-tabular-permissions==2.3
+	django-tabular-permissions>=2.3
 	django-crispy-forms==1.8.0
 	dateutils==0.6.7
 	unicodecsv==0.14.1
