enhancing chart js

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ install_requires=
 	swapper==1.1.1
 	django-reversion>=3.0.5
 	python-memcached
+	django-slick-reporting
 
 [options.entry_points]
 console_scripts =
