Documentation and enhancements

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 license_file = LICENSE
-name = django-ra
+name = django-ra-erp
 version = attr: ra.__version__
 author = Ra Systems
 author_email = ramez@rasystems.io
