django-polymorphic and models

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ install_requires=
 	django-reversion>=3.0.5
 	python-memcached
 	django-slick-reporting
+	django-polymorphic
 
 [options.entry_points]
 console_scripts =
