Adjust for jazzmin

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ install_requires=
 	python-memcached
 	django-slick-reporting
 	django-polymorphic
+	django-jazzmin
 
 [options.entry_points]
 console_scripts =
