Docs for sample erp + generate data script

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,7 +55,7 @@ install_requires=
 	python-memcached
 	django-slick-reporting
 	django-polymorphic
-	django-jazzmin
+	django-jazzmin>=2.1.5
 
 [options.entry_points]
 console_scripts =
