fix in requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,7 @@ install_requires=
 	django-slick-reporting
 	django-polymorphic
 	django-jazzmin>=2.1.5
-	django-compressor=2.3
+	django-compressor==2.3
 
 
 
