--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.4"
 services:
   web:
     build: .
-    command: python project_name/manage.py runserver 0.0.0.0:8000
+    command: ls -al
     volumes:
       - .:/code
     ports:
