--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ install_requires=
 	swapper==1.1.1
 	django-reversion>=3.0.5
 	python-memcached
-	django-slick-reporting
+	django-slick-reporting>=0.4.0
 	django-polymorphic
 	django-jazzmin>=2.1.5
 	django-compressor>=2.3
