Docs wip setup adjustments

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,13 +10,15 @@ long_description_content_type=text/x-rst
 url = https://github.com/ra-systems/RA
 project_urls =
     Travis CI = https://travis-ci.org/ra-systems/RA/
-    Ra documentation = https://ra-framework.readthedocs.io/en/latest/
-    Ra source = https://github.com/ra-systems/RA
+    Documentation = https://ra-framework.readthedocs.io/en/latest/
+    Source = https://github.com/ra-systems/RA
 classifiers =
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: 2.2
     Framework :: Django :: 3.0
+    Framework :: Django :: 3.1
+    Framework :: Django :: 3.2
+    Framework :: Django :: 4.1
     Intended Audience :: Developers
     Development Status :: 3 - Alpha
 	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
@@ -53,8 +55,3 @@ install_requires=
 	django-jazzmin>=2.5.0
 	django-compressor>==2.3
 
-
-
-[options.entry_points]
-console_scripts =
-	ra-admin=ra.project_template.ra:main
