--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ long_description_content_type=text/x-rst
 url = https://github.com/ra-systems/RA
 project_urls =
     Travis CI = https://travis-ci.org/ra-systems/RA/
-    Documentation = https://ra-framework.readthedocs.io/en/latest/
+    Documentation = https://django-erp-framework.readthedocs.io/en/latest/
     Source = https://github.com/ra-systems/RA
 classifiers =
     Environment :: Web Environment
