--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,24 +1,15 @@
-# .readthedocs.yml
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
-# Required
 version: 2
 
-# Build documentation in the docs/ directory with Sphinx
+build:
+  os: "ubuntu-20.04"
+  tools:
+    python: "3.8"
+
+# Build from the docs/ directory with Sphinx
 sphinx:
   configuration: docs/source/conf.py
 
-# Build documentation with MkDocs
-#mkdocs:
-#  configuration: mkdocs.yml
-
-# Optionally build your docs in additional formats such as PDF
-formats:
-  - pdf
-
-# Optionally set the version of Python and requirements required to build your docs
+# Explicitly set the version of Python and its requirements
 python:
-  version: 3.7
   install:
-    - requirements: requirements.txt
+    - requirements: docs/requirements.txt
