fix in requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
-license_file = LICENSE
+license_files = LICENSE,
 name = django-erp-framework
 version = attr: erp_framework.__version__
-author = Ra Systems
+author = Ramez Issac
 author_email = ramez@rasystems.io
 description = A light-weight effective Django based framework to create diverse business applications
 long_description = file:README.rst
 long_description_content_type=text/x-rst
-url = https://github.com/ra-systems/RA
+url = https://github.com/RamezIssac/django-erp-framework
 project_urls =
     Travis CI = https://travis-ci.org/ra-systems/RA/
     Documentation = https://django-erp-framework.readthedocs.io/en/latest/
@@ -53,6 +53,6 @@ install_requires=
 	django-reversion>=3.0.5
 	django-slick-reporting
 	django-jazzmin>=2.5.0
-	django-compressor>==2.3
+	django-compressor>=2.3
 
 
